[gd_scene load_steps=2 format=3 uid="uid://x1mqyy0rtmy"]

[ext_resource type="Script" uid="uid://b1t3wiuj0xynj" path="res://scripts/end_screen.gd" id="1_ay1n0"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 2
layer = 0
script = ExtResource("1_ay1n0")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0627451)

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -320.0
offset_right = 300.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="RichTextLabel" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 64
text = "Shift Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="RichTextLabel" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 48
text = "Score: 0"
horizontal_alignment = 1

[node name="Play Again" type="Button" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Main Menu")
focus_neighbor_bottom = NodePath("../Main Menu")
theme_override_font_sizes/font_size = 36
text = "Play Again"

[node name="Main Menu" type="Button" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Play Again")
focus_neighbor_bottom = NodePath("../Play Again")
theme_override_font_sizes/font_size = 36
text = "Main Menu"

[connection signal="pressed" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
